--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,89 @@
    Author's custom styles
    ========================================================================== */
 
+html, body {
+    height: 100%;
+}
 
+body {
+    padding-top: 41px;
+    background: #ebebeb;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    font-family: 'trebuchet ms',arial, sans-serif;
+}
 
+.wrapper {
+    position: relative;
+    height: auto !important;
+    height: 100%;
+    min-height: 100%;
+}
+
+header {
+    background: #7BBA55;
+    margin: 0;
+    padding: 50px 0;
+    border-bottom: 6px solid #fff;
+}
+
+h1 {
+    font: 121px 'trebuchet ms',arial, sans-serif;
+    color: #555;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+header .subtitle {
+    font-size: 44px;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    bottom: 12px;
+    left: 80px;
+}
+
+header .description {
+    color: #fff;
+    font-size: 16px;
+    margin: 45px 0 0 0;
+}
+
+.slider-wrapper {
+    width: 600px;
+    float: right !important;
+}
+
+.bar {
+    background: #f5f5f5;
+    padding: 0 0 4px 0;
+}
+
+.download-bar {
+    text-align: center;
+    padding: 10px;
+}
+
+.download-text {
+    padding: 0 20px;
+}
+
+.more-info {
+    background: #ebebeb;
+    margin: 65px 0 0 0;
+}
+.main-content > div {
+    text-align: center;
+    padding: 15px;
+}
+
+footer {
+    background: #DFDFDF;
+    height: 100px;
+    position: absolute;
+    bottom: -100px;
+    width: 100%;
+}
 
 
 
