--- a/css/styles.css
+++ b/css/styles.css
@@ -59,11 +59,17 @@ a:hover {
     text-decoration: underline;
     color:#999;
 }
+
+
+
 header, .horizontal {
     background: #fff;
-    /*background: -webkit-linear-gradient(top, #F2F2F2, #D9D9D9 );*/
     box-shadow: 0px 0px 8px #555;
     position: relative;
+}
+
+header {
+    background: -webkit-linear-gradient(top, #F2F2F2, #D9D9D9 );
 }
 
 header .logo {
