--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,15 @@ body {
     .links {
         display: block;
     }
+    .feat-pic {
+        display:none;
+    }
+    #features {
+        text-align: center;
+    }
+    .download-links {
+        text-align: center;
+    }
 
 }
 
@@ -64,9 +73,13 @@ a:hover {
 
 header, .horizontal {
     background: -webkit-linear-gradient(top, #fff, #ccc );
+    background: -moz-linear-gradient(top, #fff, #ccc );
+    background: -ms-linear-gradient(top, #fff, #ccc );
+    background: -o-linear-gradient(top, #fff, #ccc );
     box-shadow: 0px 0px 8px #555;
     position: relative;
     text-shadow:1px 1px 1px #fff;
+    width:auto;
 }
 
 
