--- a/css/styles.css
+++ b/css/styles.css
@@ -195,15 +195,55 @@ img {
     box-shadow:
         0px 1px 3px rgba(000,000,000,0.8),
         inset 0px 1px 0px rgba(255,255,255,0.8);
-    text-shadow:
-        2px 2px 0px rgba(000,000,000,0.1),
-        1px 1px 0px rgba(255,255,255,0.2);
+    text-shadow:1px 1px 1px #111;
 }
 
 .btn:hover {
     text-decoration: none;
-    color:#ccc;
+    color:#ddd;
 }
+
+.btn:hover i {
+    text-shadow:0px 0px 20px #fff;
+    color:#fff;
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    -o-transition: all 300ms ease-in-out;
+    -ms-transition: all 300ms ease-in-out;
+}
+
+.btn_twitter {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    text-decoration: none;
+    color: #ffffff;
+    padding: 10px 20px;
+    display: inline-block;
+    background:#00b9fc;
+    background: -moz-linear-gradient(
+        top,
+        #00b9fc 0%,
+        #008ebd);
+    background: -webkit-gradient(
+        linear, left top, left bottom,
+        from(#00b9fc),
+        to(#008ebd));
+    -moz-border-radius: 7px;
+    -webkit-border-radius: 7px;
+    border-radius: 7px;
+    border: 1px solid #314A59;
+    -moz-box-shadow:
+        0px 1px 3px rgba(000,000,000,0.8),
+        inset 0px 1px 0px rgba(255,255,255,0.8);
+    -webkit-box-shadow:
+        0px 1px 3px rgba(000,000,000,0.8),
+        inset 0px 1px 0px rgba(255,255,255,0.8);
+    box-shadow:
+        0px 1px 3px rgba(000,000,000,0.8),
+        inset 0px 1px 0px rgba(255,255,255,0.8);
+    text-shadow:1px 1px 1px #111;
+}
+
 
 .lowercase {
     text-transform: capitalize
