--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,7 +44,7 @@
     </div>
 </div>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="/js/jquery-2.0.0.js"></script>
 <script src="/js/jquery.cycle2.min.js"></script>
 <script src="/js/jquery.scrollTo-1.4.3.1-min.js"></script>
 <script>
@@ -68,11 +68,11 @@ $(function () {
         mac = /Mac/g;
 
     if (linux.test(platform)) {
-        downloadLink('Linux 64bit', 'download/Gisto-{{ site.gisto_version }}-Linux_x86_64.tar.gz','icon-linux');
+        downloadLink('Linux 64bit', '{{ site.download_url }}/Gisto-{{ site.gisto_version }}-Linux_x86_64.tar.gz','icon-linux');
     } else if (mac.test(platform)) {
-        downloadLink('OSX 10.7+', 'download/Gisto-{{ site.gisto_version }}-OSX_x86.dmg','icon-apple');
+        downloadLink('OSX 10.7+', '{{ site.download_url }}/Gisto-{{ site.gisto_version }}-OSX_x86.dmg','icon-apple');
     } else if (windows.test(platform)) {
-        downloadLink('Windows', 'download/Gisto-{{ site.gisto_version }}-Win_x86.zip','icon-windows');
+        downloadLink('Windows', '{{ site.download_url }}/Gisto-{{ site.gisto_version }}-Win_x86.zip','icon-windows');
     } else {
         $('.download').html('<a class="btn links innsite" href="#footer">View download options</a>');
     }
