--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,11 +4,11 @@
                     <h1>&lt;/Gisto&gt;</h1>
                 </a>
 
-                <a href="/#footer" class="twocol innsite links">
+                <a href="/#footer" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links">
                     About
                 </a>
 
-		<a href="/#features" class="twocol innsite links">
+		<a href="/#features" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links">
                     Features
                 </a>
 
@@ -20,7 +20,7 @@
                     Changelog
                 </a>             
 
-                <a href="/#contact" class="twocol innsite links last">
+                <a href="/#contact" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links last">
                     Contact
                 </a>
 
