--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,28 +1,29 @@
 <header class="container">
-            <div class="row">
-                <a href="/" class="twocol logo">
-                    <h1>&lt;/Gisto&gt;</h1>
-                </a>
+    <div class="row">
+        <a href="/" class="twocol logo">
+            <h1>&lt;/Gisto&gt;</h1>
+        </a>
 
-                <a href="/#footer" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links">
-                    About
-                </a>
+        <a href="/#footer" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links">
+            About
+        </a>
 
-		<a href="/#features" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links">
-                    Features
-                </a>
+        <a href="/#features" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links">
+            Features
+        </a>
 
-		<a href="/docs/" class="twocol links">
-                    Docs
-                </a>
+        <a href="/docs/" class="twocol links">
+            Docs
+        </a>
 
-		<a href="/changelog/" class="twocol links">
-                    Changelog
-                </a>             
+        <a href="/changelog/" class="twocol links last">
+            Changelog
+        </a>
 
-                <a href="/#contact" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links last">
-                    Contact
-                </a>
+        <a href="/#footer" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links">
+            <span>Get it</span>
+        </a>
 
-            </div>
-        </header>
+
+    </div>
+</header>
