--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="container">
     <div class="row">
-        <a href="/" class="twocol logo">
+        <a href="/" class="fourcol logo">
             <h1>&lt;/Gisto&gt;</h1>
         </a>
 
@@ -16,12 +16,8 @@
             Docs
         </a>
 
-        <a href="/changelog/" class="twocol links last">
-            Changelog
-        </a>
-
-        <a href="/#footer" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links">
-            <span>Get it</span>
+        <a href="/#footer" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links last">
+            <span>Download</span>
         </a>
 
 
