Made changes for v0.2.0b

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
             About
         </a>
 
-        <a href="/#features" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links">
+        <a href="/features/" class="twocol links">
             Features
         </a>
 
