Made changes for v0.2.1b

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,3 +23,36 @@
 
     </div>
 </header>
+
+<!--
+<header class="container">
+    <div class="row">
+        <a href="/" class="threecol logo">
+            <h1>&lt;/Gisto&gt;</h1>
+        </a>
+
+        <a href="/#footer" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links">
+            About
+        </a>
+
+        <a href="/features/" class="twocol links">
+            Features
+        </a>
+
+        <a href="/docs/" class="twocol links">
+            Docs
+        </a>
+
+        <a href="/faq/" class="onecol links">
+            FAQ
+        </a>
+
+        <a href="/#footer" class="twocol {% if page.menu == 'home' %}innsite{% endif %} links last">
+            <span>Download</span>
+        </a>
+
+
+    </div>
+</header>
+
+-->
