--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,12 @@ body {
     .links {
         display: block;
     }
+    .hero {
+        text-align: center;
+    }
+    .hero a {
+        margin-bottom: 10px;
+    }
 
 }
 
@@ -46,6 +52,12 @@ body {
     .download-links {
         text-align: center;
     }
+    .hero {
+        text-align: center;
+    }
+    .hero a {
+        margin-bottom: 10px;
+    }
 
 }
 
@@ -54,7 +66,9 @@ body {
 /* ! REGULAR STYLE                            */
 /* ========================================== */
 
-
+.row, .conteiner, body {
+    width: inherit;
+}
 body {
     font-family: 'Open Sans', serif,"Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 150%;
@@ -128,7 +142,7 @@ img {
 .features h1 {
     color: #f2f2f2;
     font-weight: 400;
-    font-size: 38px;
+    font-size: 130%;
     text-shadow: 1px 1px 5px #555;
 }
 
