--- a/css/gisto.webflow.css
+++ b/css/gisto.webflow.css
@@ -38,7 +38,8 @@
     padding: 10px 0 !important; } }
 html {
   /*  background: url(../images/bg.jpg) no-repeat center center fixed #f2f2f2;*/
-  background: url("http://fc03.deviantart.net/fs27/f/2008/070/1/f/Background_by_xishan1.jpg") no-repeat center center fixed #f2f2f2;
+  background: url("../images/orig1.jpg") no-repeat center center fixed #f2f2f2;
+  /* http://xishan1.deviantart.com */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -56,7 +57,7 @@ body {
   color: #333;
   font-size: 12px;
   margin-top: 0;
-  line-height: 20px; }
+  line-height: 25px; }
 
 a, button {
   color: inherit;
@@ -81,6 +82,10 @@ p {
 
 .bg-sky {
   background: skyblue; }
+
+.gisto {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700; }
 
 h1 {
   margin: 30px 0px;
@@ -151,7 +156,7 @@ nav {
   text-transform: uppercase;
   font-weight: 400; }
   .nav-link:hover {
-    color: tomato; }
+    text-shadow: 1px 1px 1px #fff,0px 1px 3px #555; }
 
 .nav-link-download {
   color: tomato; }
@@ -169,7 +174,7 @@ nav {
 
 header {
   background: #fff;
-  box-shadow: 0 0 5px #999; }
+  box-shadow: 0 0 5px #555; }
   header h1 {
     padding: 10px 0px;
     margin: 0; }
@@ -209,7 +214,7 @@ header {
 
 .whiter {
   background: #fff;
-  box-shadow: 0 0 5px #999;
+  box-shadow: 0 0 5px #555;
   padding: 20px 0; }
   .whiter h2 {
     text-align: center; }
@@ -221,6 +226,10 @@ header {
   border-radius: 50%;
   width: 90%;
   border: 1px solid #CCC; }
+
+.the-who img {
+  border-radius: 50%;
+  border: 1px solid #333; }
 
 .push {
   height: 55px; }
@@ -241,6 +250,9 @@ footer {
 .txt-left {
   text-align: left; }
 
+.txt-center {
+  text-align: center; }
+
 .twitter:hover {
   background: #3cf; }
 
@@ -249,3 +261,43 @@ footer {
 
 .fb:hover {
   background: #3b5998; }
+
+ul {
+  list-style: none;
+  font-size: 16px;
+  padding: 0;
+  line-height: 25px; }
+
+.inner h2, .inner h3, .inner h4, .inner h5, .inner h6 {
+  text-align: left; }
+.inner nav ul {
+  list-style: none;
+  font-size: 16px;
+  padding: 0; }
+  .inner nav ul a {
+    border: 1px solid #ccc;
+    margin: 10px 0;
+    display: block;
+    border-radius: 3px;
+    padding: 5px 10px; }
+    .inner nav ul a:hover {
+      background: tomato;
+      border: 1px solid tomato;
+      color: #fff; }
+
+.icons-ul {
+  margin-left: 0 !important; }
+  .icons-ul i {
+    color: tomato; }
+
+.btn-center {
+  margin: 20px auto 0;
+  display: block; }
+
+.download:hover {
+  padding: 20px;
+  border: 1px dashed #ccc;
+  background: #f2f2f2;
+  border-radius: 3px; }
+  .download:hover i {
+    text-shadow: 0px 0px 10px #fff; }
