--- a/css/gisto.webflow.css
+++ b/css/gisto.webflow.css
@@ -215,7 +215,7 @@ header {
 .whiter {
   background: #fff;
   box-shadow: 0 0 5px #555;
-  padding: 20px 0; }
+  padding: 50px 0; }
   .whiter h2 {
     text-align: center; }
   .whiter h3 {
@@ -239,9 +239,10 @@ footer {
   left: 0;
   bottom: 0;
   height: 55px;
-  width: 100%; }
+  width: 100%;
+  padding: 20px 0;
+  text-align: center; }
   footer p {
-    font-size: 10px;
     padding: 0 10px; }
 
 .txt-right {
@@ -294,10 +295,13 @@ ul {
   margin: 20px auto 0;
   display: block; }
 
-.download:hover {
+.download {
   padding: 20px;
-  border: 1px dashed #ccc;
-  background: #f2f2f2;
-  border-radius: 3px; }
-  .download:hover i {
-    text-shadow: 0px 0px 10px #fff; }
+  border: 1px solid #fff; }
+  .download:hover {
+    padding: 20px;
+    border: 1px dashed #ccc;
+    background: #f2f2f2;
+    border-radius: 3px; }
+    .download:hover i {
+      text-shadow: 0px 0px 10px #fff; }
