--- a/css/gisto.webflow.scss
+++ b/css/gisto.webflow.scss
@@ -271,7 +271,7 @@ header {
 .whiter {
   background: #fff;
   box-shadow: 0 0 5px #555;
-  padding: 20px 0;
+  padding: 50px 0;
   & h2 {
     text-align: center;
   }
@@ -302,8 +302,9 @@ footer {
   bottom: 0;
   height: 55px;
   width: 100%;
+  padding: 20px 0;
+  text-align: center;
   & p {
-    font-size: 10px;
     padding: 0 10px;
   }
 }
@@ -375,6 +376,8 @@ ul {
 }
 
 .download {
+  padding: 20px;
+  border:1px solid #fff;
 &:hover {
   padding: 20px;
   border:1px dashed #ccc;
