--- a/css/gisto.scss
+++ b/css/gisto.scss
@@ -119,6 +119,7 @@ h1 {
   line-height: 44px;
   font-weight: 100;
   text-align: center;
+  text-shadow: 0px 1px 0px #FFF;
 }
 
 h2 {
@@ -156,7 +157,7 @@ h6 {
   font-weight: 100;
 }
 
-.button {
+.button, .btn {
   display: inline-block;
   padding: 4px 15px;
   background-color: tomato;
@@ -193,7 +194,8 @@ nav {
   text-transform: uppercase;
   font-weight: 400;
   &:hover {
-    text-shadow: 1px 1px 1px #fff,0px 1px 3px #555;
+    text-shadow: 1px 1px 1px #fff, 0px 1px 3px tomato;
+    color: tomato;
   }
 }
 
@@ -282,9 +284,15 @@ header {
 }
 
 .feat {
-  border-radius: 50%;
-  width: 90%;
-  border: 1px solid #CCC;
+  text-align: center;
+  & img {
+    border-radius: 50%;
+    border: 1px solid #CCC;
+    width: 90%;
+  }
+  & p {
+    text-align: left;
+  }
 }
 
 .the-who img {
@@ -292,20 +300,23 @@ header {
   border: 1px solid #333;
 }
 
-.push {
-  height: 55px;
+.push,
+footer {
+  height: 150px;
 }
 
 footer {
   position: absolute;
   left: 0;
   bottom: 0;
-  height: 55px;
   width: 100%;
   padding: 20px 0;
-  text-align: center;
-  & p {
-    padding: 0 10px;
+  & img {
+    border-radius: 50%;
+    border: 1px solid #333;
+  }
+  & > p {
+    padding: 20px 0;
   }
 }
 
@@ -357,34 +368,78 @@ ul {
       &:hover {
         background: tomato;
         border: 1px solid tomato;
-        color:#fff;
+        color: #fff;
       }
     }
   }
 }
 
 .icons-ul {
-  margin-left:0 !important;
+  margin-left: 0 !important;
   & i {
-    color:tomato;
+    color: tomato;
   }
 }
 
 .btn-center {
   margin: 20px auto 0;
-  display: block;
+  display: inline-block;
 }
 
 .download {
   padding: 20px;
-  border:1px solid #fff;
-&:hover {
-  padding: 20px;
-  border:1px dashed #ccc;
-  background:#f2f2f2;
-  border-radius: 3px;
-  & i {
-    text-shadow: 0px 0px 10px #fff;
+  border: 1px solid #fff;
+  & h4 {
+    text-align: center;
+  }
+  &:hover {
+    padding: 20px;
+    border: 1px dashed #ccc;
+    background: #f2f2f2;
+    border-radius: 3px;
+    & i {
+      text-shadow: 0px 0px 10px #fff;
+    }
+    &:active {
+      background: skyblue;
+    }
   }
 }
+
+.center-holder {
+  position: relative;
+  text-align: center;
+}
+
+pre {
+  white-space: pre;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  border: 1px solid #ccc;
+  padding: 10px;
+  background: beige;
+  font-family: monospace;
+  position: relative;
+  color: #555;
+  font-size: 15px;
+  border-radius: 3px;
+  box-shadow: 0px 5px 10px #ccc inset;
+  & span {
+    position: absolute;
+    display: block;
+    background: #FFF;
+    top: 0;
+    right: 0;
+    border-radius: 0px 3px;
+    padding: 0px 5px;
+    font-size: 10px;
+    box-shadow: -2px 2px 5px #CCC;
+    color: #999;
+    transition: opacity 0.5s ease-in-out;
+    -moz-transition: opacity 0.5s ease-in-out;
+    -webkit-transition: opacity 0.5s ease-in-out;
+  }
+  &:hover span {
+    opacity: 0;
+  }
 }
