--- a/css/gisto.scss
+++ b/css/gisto.scss
@@ -42,6 +42,23 @@
     background: #CCC;
     padding: 10px 0 !important;
   }
+
+  a.txt-center p, i, footer p {
+    text-align: center !important;
+  }
+
+  .not-a-player {
+    padding-bottom: 20px;
+  }
+
+  footer .w-col.w-col-1.w-clearfix {
+    margin:40px 0 0 0;
+  }
+
+  pre {
+    text-align: left;
+  }
+
 }
 
 @media screen and (max-width: 767px) {
@@ -283,18 +300,6 @@ header {
   }
 }
 
-.feat {
-  text-align: center;
-  & img {
-    border-radius: 50%;
-    border: 1px solid #CCC;
-    width: 90%;
-  }
-  & p {
-    text-align: left;
-  }
-}
-
 .the-who img {
   border-radius: 50%;
   border: 1px solid #333;
@@ -374,6 +379,33 @@ ul {
   }
 }
 
+.inner .feat {
+  margin: 0 0 50px 0;
+}
+
+.feat {
+  text-align: center;
+  & img {
+    -webkit-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;
+    border-radius: 50%;
+    border: 1px solid #CCC;
+    width: 90%;
+    &:hover {
+      border-radius: 3px;
+      box-shadow: 0px 4px 10px #555;
+      border: 1px solid #333;
+    }
+  }
+  & p {
+    text-align: left;
+  }
+  & h3 {
+    text-align: center;
+  }
+}
+
 .icons-ul {
   margin-left: 0 !important;
   & i {
@@ -442,4 +474,24 @@ pre {
   &:hover span {
     opacity: 0;
   }
+}
+
+.main {
+  & p a, ul a {
+    color:tomato;
+    &:hover {
+      color:skyblue;
+    }
+  }
+}
+
+a.top {
+  background: #555;
+  display: none;
+  color: #FFF;
+  position: fixed;
+  bottom: 10px;
+  right: 0;
+  padding: 0px 5px 0px 10px;
+  border-radius: 50% 0 0 50%;
 }
