--- a/css/gisto.css
+++ b/css/gisto.css
@@ -49,9 +49,7 @@
   pre {
     text-align: left; } }
 html {
-  /*  background: url(../images/bg.jpg) no-repeat center center fixed #f2f2f2;*/
-  background: url("../images/orig1.jpg") no-repeat center center fixed #f2f2f2;
-  /* http://xishan1.deviantart.com */
+  background: url(../images/sky.jpg) no-repeat center center fixed #f2f2f2;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
