--- a/css/gisto.css
+++ b/css/gisto.css
@@ -49,7 +49,8 @@
   pre {
     text-align: left; } }
 html {
-  background: url(../images/sky.jpg) no-repeat center center fixed #f2f2f2;
+  background: url("../images/orig2.jpg") no-repeat center center fixed #f2f2f2;
+  /* http://xishan1.deviantart.com */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
