--- a/css/gisto.scss
+++ b/css/gisto.scss
@@ -70,8 +70,8 @@
 }
 
 html {
-    background: url(../images/sky.jpg) no-repeat center center fixed #f2f2f2;
-  //background: url('../images/orig1.jpg') no-repeat center center fixed #f2f2f2; /* http://xishan1.deviantart.com */
+  //background: url(../images/sky.jpg) no-repeat center center fixed #f2f2f2;
+  background: url('../images/orig2.jpg') no-repeat center center fixed #f2f2f2; /* http://xishan1.deviantart.com */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
