New version of Gisto 0.2.2b

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -93,10 +93,10 @@ $(function () {
         $('.prev_versions').append(prev_versions_tpl.replace(new RegExp("%%v%%", "gm"), versions[i]));
     }
 
-    $('.archive:first').click(function(ev){
+/*    $('.archive:first').click(function(ev){
         ev.preventDefault();
         $('.older').slideDown();
-    });
+    });*/
 
 });
 </script>
